# self-hosted-finances

./: .env.sample  CONTRIBUTING.md  Makefile  README.md  RELEASES.md  lefthook.yml
backend/: .env  Cargo.toml
backend/migrations/2022-02-07-054848_create_users/: up.sql
backend/src/: main.rs
backend/src/responders/: ok_responders.rs
backend/src/sample/: controller.rs
backend/src/users/: controller.rs  mod.rs  user_model.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/api_client/: client.rs
src/responders/: mod.rs
