# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.41"